# eduardoos_mnf_rust_202507050541

./: Cargo.toml  build copy.rs  build.rs
html_pages/: Cargo.toml
html_pages/src/: home_page.rs  lib.rs  page_template.rs
html_pages/static/: home_page.css  home_page.js
pages_components/: Cargo.toml
pages_components/src/: lib.rs
pages_components/src/components/: button_component.rs  mod.rs  task_card_001.rs
pages_components/src/components/button_component/: button_component.html  button_component.rs  button_component_head.js
pages_components/src/components/task_card_001/: task_card_001.html
src/: main.rs
static/: button_component.css  button_component.js  global.css
